adicionando pedidos